force-app/main/default/objects/SteelStandardAlias__mdt/SteelStandardAlias__mdt.object-meta.xml
<CustomObject>
    <label>Steel Standard Alias</label>
    <pluralLabel>Steel Standard Alias</pluralLabel>
</CustomObject>