force-app/main/default/objects/SteelStandardAlias__mdt/fields/CanonicalCode__c.field-meta.xml
<CustomField>
    <fullName>CanonicalCode__c</fullName>
    <label>CanonicalCode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>