force-app/main/default/objects/SteelStandardAlias__mdt/fields/CanonicalStandard__c.field-meta.xml
<CustomField>
    <fullName>CanonicalStandard__c</fullName>
    <label>CanonicalStandard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>