force-app/main/default/objects/SteelStandardAlias__mdt/fields/ERP_FacetGroup__c.field-meta.xml
<CustomField>
    <fullName>ERP_FacetGroup__c</fullName>
    <label>ERP_FacetGroup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GAMP</fullName>
                <default>true</default>
                <label>GAMP</label>
            </value>
            <value>
                <fullName>RAMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>